files/script/test_need_verify/parse_error/def/test_def_error4.ll


def main(]
{

}
#script("test/parse_error/def/test_def_error4.nl")